# cpp-experiments

./: CMakeLists.txt  base.cpp  collection.cpp  composition.cpp  functional.cpp  functional1.cpp  functional2.cpp  holder.cpp  map.cpp  nice.cpp  pointer.cpp  result.cpp  store.cpp  swizzling.cpp  swizzling2.cpp  timer.cpp  verbose.h
